--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^9.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.11"
   },
