--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,7 @@
   "description": "Incident Management and warehousing app for Planet Rebase LLC (totally real)",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server",
-    "watch:css": "postcss --watch src/static/css/tailwind.css -o public/build/tailwind.css",
-    "build:css": "postcss src/static/css/tailwind.css -o public/build/tailwind.css",
-    "watch:js": "parcel watch src/static/js/index.js -d public/build"
+    "start": "nodemon server"
   },
   "keywords": [
     "node",
@@ -19,15 +16,11 @@
   "author": "Nicholas Surmava",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^9.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0",
-    "postcss-cli": "^8.0.0",
-    "tailwindcss": "^1.8.11"
+    "express-ejs-layouts": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "parcel-bundler": "^1.12.4"
+    "nodemon": "^2.0.4"
   }
 }
