--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.19.0",
     "bulma": "^0.9.1",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
