--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bulma": "^0.9.1",
+    "chart.js": "^2.9.4",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0"
