--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "chart.js": "^2.9.4",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "express-ejs-layouts": "^2.5.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
