--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "faker": "^5.1.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
